player movement, spawn enemies, bullets and test collisions

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 		
 		<!-- Scripts -->
 		<script src="js/Drawable.js"></script>
+		<script src="js/DrawableControl.js"></script>
 		<script src="js/Scene.js"></script>
 		<script src="js/Game.js"></script>
 		<script src="js/Main.js"></script>
 		<script src="js/Character.js"></script>
-		<script src="js/Player.js"></script>
+		<script src="js/Player.js"></script>		
 		<script src="js/Enemy.js"></script>
-		<script src="js/Sprite.js"></script>		
-		<script src="js/Spawner.js"></script>
+		<script src="js/Sprite.js"></script>
+		<script src="js/Bullet.js"></script>
+		<script src="js/Spawner.js"></script>	
 		
 	</head>
 	<body>
